--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -51,14 +51,14 @@
         </ol>
         <div class="carousel-inner" role="listbox">
           <!-- Slide One - Set the background image for this slide in the line below -->
-          <div class="carousel-item active" style="background-image: url('/assets/Ordi_sunset.jpeg')">
+          <div class="carousel-item active" style="background-image: url(<%= asset_path 'Ordi_sunset.jpg' %>)">
             <div class="carousel-caption d-none d-md-block">
               <h3>The Hacking Project</h3>
               <p>Mettez-vous à jour en 3 mois, gratuitement !</p>
             </div>
           </div>
           <!-- Slide Two - Set the background image for this slide in the line below -->
-          <div class="carousel-item" style="background-image: url('/assets/working.jpg')">
+          <div class="carousel-item" style="background-image: url(<%= asset_path 'working.jpg'%>)">
             <div class="carousel-caption d-none d-md-block">
               <h3>The Hacking Project</h3>
               <p>Enrichissez-vous de la communauté avec le peer-learning !</p>
@@ -66,7 +66,7 @@
           </div>
           <!-- Slide Three - Set the background image for this slide in the line below -->
           
-          <div class="carousel-item" style="background-image: url('/assets/Ordi_groupe.jpg')">
+          <div class="carousel-item" style="background-image: url(<%= asset_path 'Ordi_groupe.jpg'%>)">
             <div class="carousel-caption d-none d-md-block">
               <h3>The Hacking Project</h3>
               <p>Devenez Devellopeur web en 3 mois ! </p>
