--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -95,7 +95,7 @@
         </div>
         <div class="col-md-4">
           <button type="button" class="btn btn-lg btn-block btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-            Recevoir la demo
+            Ça m'intéresse ! 
           </button>
         </div>
       </div>
